fix: navbar glitch when low overflow

--- a/linktree/src/styles/scrollbar.scss
+++ b/linktree/src/styles/scrollbar.scss
@@ -11,12 +11,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0.5, v.$color600),
-    color-stop(1, v.$color300)
-  );
+  background-color: v.$color500;
   border-radius: 10px;
 }
